--- a/Google Search Clone/style.css
+++ b/Google Search Clone/style.css
@@ -54,6 +54,7 @@
      padding: 13px;
      outline: none;
      font-size: 16px;
+     border: 1px solid #ccc;
      border-radius: 30px;
      padding-left: 45px;
      padding-right: 60px;
@@ -61,7 +62,7 @@
 
  section .main .searchBx .query:hover,
  section .main .searchBx .query:focus {
-     outline: 1px solid #333;
+     border: 1px solid #333;
  }
 
  section .main .searchBx .icons {
@@ -94,6 +95,6 @@
 
  .searchBtn:hover,
  .searchBtn:focus {
-    outline: 1px solid #333;
+    border: 1px solid #333;
     color: #333;
  }
