--- a/E-commerce cards/style.css
+++ b/E-commerce cards/style.css
@@ -24,7 +24,7 @@ body {
     position: relative;
     width: 75em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 1.5em;
     padding: 1.2em;
 }
@@ -175,4 +175,22 @@ body {
     position: absolute;
     right: 10px;
     user-select: none;
+}
+
+@media (max-width:1000px) {
+    .container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width:700px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:450px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
